tests/neg-custom-args/captures/sep-consume.check
-- Error: tests/neg-custom-args/captures/sep-consume.scala:30:49 -------------------------------------------------------
30 |def test4(consume p: Pair[Ref^, Ref^]): Ref^ = p.fst // error
   |                                               ^^^^^
   |                          Local reach capability p.fst* leaks into capture scope of method test4.
   |                          You could try to abstract the capabilities referred to by p.fst* in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-consume.scala:19:2 --------------------------------------------------------
Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
18 |  val rx: () => Unit = bad(f)  // hides x.rd in the resulting `cap`
   |                           -
   |                           The capability was consumed here.
19 |  x.put(42)  // error
   |  ^
<<<<<<< HEAD
   |  Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
   |  on line 18 and therefore is no longer available.
   |
   |  where:    ^ refers to a fresh root capability classified as Unscoped in the type of parameter x
=======
   |  Then, it was used here

>>>>>>> 2ee70f2604 (Update checkfiles)
-- Error: tests/neg-custom-args/captures/sep-consume.scala:21:16 -------------------------------------------------------
Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
18 |  val rx: () => Unit = bad(f)  // hides x.rd in the resulting `cap`
   |                           -
   |                           The capability was consumed here.
19 |  x.put(42)  // error
20 |  x.get      // ok rd/rd
21 |  par(rx, () => x.put(42))  // error
   |                ^
<<<<<<< HEAD
   |         Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
   |         on line 18 and therefore is no longer available.
   |
   |         where:    ^ refers to a fresh root capability classified as Unscoped in the type of parameter x
=======
   |                Then, it was used here

>>>>>>> 2ee70f2604 (Update checkfiles)
-- Error: tests/neg-custom-args/captures/sep-consume.scala:26:16 -------------------------------------------------------
26 |  def foo = bad(f) // error
   |                ^
   |  Separation failure: argument to consume parameter with type (f : () ->{x.rd} Unit) refers to non-local value f
